修改加油站默认图片等
